--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -19,7 +19,9 @@
             <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="page-title">
                     <h2>Anpero là gì?</h2>
-                    <p>Anpero là hệ thống web quản lý bán hàng tập trung, với Anpero khách sẽ có hệ thống web bán hàng vô cùng chuyên nghiệp, các chức năng được cập nhật miễn phí và đều đặn so với việc bạn thuê viết một trang đơn lẻ. Hơn thế nữa khách hàng có thể tự chủ về giao diện web , nơi lưu trữ web bán hàng (hosting) bla bla</p>
+                    <p>Anpero là hệ thống web quản lý bán hàng tập trung trên công nghệ điện toán đám mây, với Anpero khách sẽ có hệ thống web bán hàng vô cùng chuyên nghiệp, các chức năng được cập nhật miễn phí và đều đặn so với việc bạn thuê viết một trang đơn lẻ. Hơn thế nữa khách hàng có thể tự chủ về  mã nguồn giao diện web, nơi lưu trữ web bán hàng (hosting)...</p>
+                    <p>Sử dụng hệ thống anpero quý khách hàng sẽ giảm chi phí rất nhiêu nếu muốn thiết kế một trang web chuyên nghiệp, Có khả năng tương tác tuyệt vời như nhắn tin, gửi mail tự động và miễn phí cho bạn khi có khách đặt hàng, đảm bảo quý khách không bỏ lỡ bất cứ đơn hàng nào</p>
+                    
                 </div>
             </div>
         </div>
