--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -121,10 +121,10 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 ">
                         <div class="social-menu circle text-right">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="@commonInfo.FaceBookLink" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="/"><i class="fa fa-twitter"></i></a>
+                            <a href="/"><i class="fa fa-linkedin"></i></a>
+                            <a href="/"><i class="fa fa-google-plus"></i></a>
                         </div>
                     </div>
                 </div>
