--- a/06_Shop_Onepage/assets/css/style.css
+++ b/06_Shop_Onepage/assets/css/style.css
@@ -122,7 +122,7 @@ textarea.form-control:focus {
 }
 
 .section-padding {
-    padding: 120px 0;
+    padding: 155px 0;
 }
 
 .padding-top {
@@ -1053,7 +1053,7 @@ textarea.form-control:focus {
 .price-battn {
     background-color: #ffffff;
     padding: 4px 20px;
-    border-radius: 100px;
+    border-radius: 5px;
     display: inline-block;
     color: #464646;
     font-weight: 600;
@@ -1473,3 +1473,69 @@ li{ list-style:none;}
 
 }
 .mbt15{margin-bottom:15px;}
+.tct2 ul {
+    margin: 0;
+    text-align: center;
+    overflow: inherit;
+    font-size: 1em;
+    margin-bottom: 15px;
+}
+.tct2 ul .vc_active i, .tct2 ul .vc_active span, .tct2 ul li:hover {
+    color: white !important;
+}
+.tct2 ul .vc_active, .tct2 ul li:hover {
+    background-color: rgba(43, 23, 13, 0.8);
+}
+.tct2 ul li {
+    position: relative;
+    display: inline-block;
+    height: 80px;
+    width: 80px;
+    background-color: white;
+    margin: 5px;
+    box-shadow: 1px 1px 1px #888888;
+    cursor: pointer;
+    color: rgb(87, 71, 65);
+}
+.tct2 ul li i {
+    margin: 0;
+    display: inline-block;
+    font-size: 28px;
+    height: 50px;
+    line-height: 50px;
+}
+.tct2 ul li span {
+    display: block;
+    margin: 0;
+}
+.tct2 ul li:after {
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid;
+    bottom: -10px;
+    content: "";
+    height: 0;
+    left: 50%;
+    margin-left: -10px;
+    position: absolute;
+    width: 0;
+    -webkit-opacity: 0;
+    -khtml-opacity: 0;
+    -moz-opacity: 0;
+    opacity: 0;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+    filter: alpha(opacity=0);
+    visibility: hidden;
+}
+.tct2 ul .vc_active:after {
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    opacity: 1;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+    filter: alpha(opacity=80);
+    visibility: visible;
+    color: #574741;
+}
+.tab-ct{display:none;}
+.active{display:block;}
