--- a/07_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -80,10 +80,10 @@
                                 <div class="product-name">
                                     <h1 itemprop="name">@item.PrName</h1>
                                 </div>
-
                                 @if (item.Price > 0)
-                                {             <span itemprop="aggregateRating" itemscope="" itemtype="http://schema.org/AggregateRating">
-                                    <div class="rating">
+                                {
+                                <span itemprop="aggregateRating" itemscope="" itemtype="http://schema.org/AggregateRating">
+                                   <div class="rating">
                                         <div class="ratings">
                                             <p class="rating-links"><a href="tel:@commonInfo.HotLine">Gọi: @commonInfo.HotLine hoặc click mua ngay để đặt hàng</a> </p>
                                         </div>
@@ -118,11 +118,11 @@
                                         }
 
                                 </div>
-                                    <div class="short-description">
+                                <div class="short-description">
                                         <h2>Mô tả ngắn</h2>
                                         <p>@Html.Raw(item.ShortDesc)</p>
                                     </div>
-                                        <div class="add-to-box">
+                                <div class="add-to-box">
                                             <div class="add-to-cart">
                                                 <div class="pull-left">
                                                     <div class="custom pull-left">
@@ -138,7 +138,6 @@
                                             </div>
                                         </div>
                                 }
-
                                 <div class="social">
                                     <ul class="link">
                                         @if (!string.IsNullOrEmpty(commonInfo.Skype) || !string.IsNullOrEmpty(commonInfo.FaceBookLink))
@@ -157,13 +156,12 @@
                                             }
                                             <li class="tw pull-left"><a target="_blank" rel="nofollow" href="http://www.twitter.com/share?url=@ViewBag.WebsiteUrl" title="Twitter"></a></li>
                                                     <li class="googleplus pull-left"><a target="_blank" rel="nofollow" href="https://plus.google.com/share?url=@ViewBag.WebsiteUrl" title="GooglePlus"></a></li>
-                                                    @*<li class="pintrest pull-left"><a target="_blank" rel="nofollow" href="http://pinterest.com/pinthis?url=@thisUrl" title="PInterest"></a></li>*@
                                         }
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="product-collateral container">
+                        <div class="product-collateral">
                             <ul id="product-detail-tab" class="nav nav-tabs product-tabs">
                                 <li class="active"> <a href="#product_tabs_description" data-toggle="tab"> Mô tả sản phẩm </a> </li>
                             </ul>
@@ -176,12 +174,15 @@
                             </div>
                         </div>
                         <div class="box-additional">
-                            <div class="related-pro container">
+                            <div class="related-pro">
                                 <div class="slider-items-products">
                                     <div class="new_title center">
                                         <h2>Sản phẩm liên quan</h2>
                                     </div>                                    
-                                        <div class="products-grid">
+                                        @*<div class="products-grid col-md-12">*@
+                                    <div  id="related-slider"  class="product-flexslider hidden-buttons">
+                                        <div class="slider-items slider-width-col2 products-grid">
+
                                             @if (ViewData["relateProduct"] != null)
                                             {
                                                 AnperoFrontend.WebService.SearchResult relateProduct = (AnperoFrontend.WebService.SearchResult)ViewData["relateProduct"];
@@ -189,7 +190,7 @@
                                                 {
                                                     foreach (var items in relateProduct.Item)
                                                     {
-                                                        <div class="item col-md-4" style="margin-bottom:15px;">
+                                                        <div class="item">
                                                             <div class="item-inner">
                                                                 <div class="item-img">
                                                                     <div class="item-img-info">
@@ -215,14 +216,14 @@
                                                                                 @items.PrName
                                                                             </a>
                                                                         </div>
-                                                                        <div class="item-content">                                                                           
-                                                                            <div class="item-price">
-                                                                                <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(items.Price) đ</span> </span> </div>
-                                                                            </div>
-                                                                            <div class="add_cart">
-                                                                                <button class="button btn-cart" type="button" onclick="Cart.addProduct(@items.Id,@items.Price,'@items.Images','@items.PrName');"><span>Mua ngay</span></button>
-                                                                            </div>
-                                                                        </div>
+                                                                        @*<div class="item-content">
+                                                <div class="item-price">
+                                                    <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(items.Price) đ</span> </span> </div>
+                                                </div>
+                                                <div class="add_cart">
+                                                    <button class="button btn-cart" type="button" onclick="Cart.addProduct(@items.Id,@items.Price,'@items.Images','@items.PrName');"><span>Mua ngay</span></button>
+                                                </div>
+                                            </div>*@
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -231,7 +232,7 @@
                                                 }
                                             }
                                         </div>
-                                    
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -244,7 +245,6 @@
         <script type="text/javascript" src="/assets/js/jquery.flexslider.js"></script>
         <script type="text/javascript" src="/assets/js/jquery.bxslider.min.js"></script>
         <script type="text/javascript" src="/assets/js/cloud-zoom.js"></script>
-
         <script src="/assets/plugins/fancybox-3/dist/jquery.fancybox.min.js"></script>
         <script>
             $(window).load(function(){
