--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -309,7 +309,7 @@
             else
             {
 
-                <div class="row">
+                @*<div class="row">
                     <div class="row banner-bottom">
                         <div class="col-sm-6 item-left">
                             <div class="banner-boder-zoom">
@@ -322,7 +322,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>*@
 
             }
         }
