--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -12,7 +12,11 @@
         <div class="currency"><a href="tel:@commonInfo.HotLine">Click để gọi: @commonInfo.HotLine</a></div>
         <div class="top-bar-social">
             <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
-            <a href="@commonInfo.FaceBookLink" target="_blank"><i class="fa fa-facebook"></i></a>
+            @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+            {
+                <a href="@commonInfo.FaceBookLink" target="_blank"><i class="fa fa-facebook"></i></a>
+            }
+            
         </div>
         <div class="support-link">
             <a href="/about">Thông tin cửa hàng</a>
