--- a/04_Shop_multiProduct/Views/Product/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Index.cshtml
@@ -8,9 +8,9 @@
             <div class="breadcrumb clearfix">
                 <a class="home" href="/" title="Return to Home">Home</a>
                 <span class="navigation-pipe">&nbsp;</span>
-                <a href="/" title="Return to Home">@item.ParentCatName</a>
+                <a href="/">@item.ParentCatName</a>
                 <span class="navigation-pipe">&nbsp;</span>
-                <a href="/" title="Return to Home">@item.CatName</a>
+                <a href="/">@item.CatName</a>
             </div>
             <!-- ./breadcrumb -->            
             <div class="row">              
