--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="form-group input-serach">
-                    <input type="text" placeholder="Tìm kiếm mọi thứ..." name="keyword">
+                    <input type="text" placeholder="Tìm kiếm ..." name="keyword">
                 </div>
                 <button type="submit" class="pull-right btn-search" id="btnSearch"></button>
             </form>
