--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -5180,3 +5180,7 @@ span.notify-right{
     padding: 0;
     margin: 0;
 }
+#navbar .navbar-nav{
+        background-image: url(http://media.anpero.com/images/27/12018/22018012313045580.jpg);
+}
+.currency{font-weight:bold;}
