--- a/07_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -142,8 +142,7 @@
                                     Bảng vẽ Kiến trúc, Nội thất
                                     Kết cấu, M&E
                                     Hồ sơ xin phép xây dựng
-                                    Giám sát tác giả
-                                </div>
+                                    Giám sát tác giả</div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-3 xs-bottom-40 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
@@ -225,7 +224,6 @@
                                     Bảng vẽ 3D nội thất
                                     M&E
                                     Giám sát tác giả
-                                    .
                                 </div>
                             </div>
                         </div>
