--- a/02_BDS_BatDongSan_MultiLand/assets/css/style.css
+++ b/02_BDS_BatDongSan_MultiLand/assets/css/style.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Arial', sans-serif;
     font-size: 14px;
     overflow-x: hidden;
+    background: url(http://media.anpero.com/images/27/12018/cloud-bg2018012314024680.jpg) center no-repeat;
 }
 
     body.is-ontop {
@@ -1085,7 +1086,7 @@ span.notify-right {
  [ 3.4 Main menu]
  */
 .nav-top-menu {
-    background: #f5f5f5;
+    background: #3b5998;
 }
 /*-----------------
  [ 3.4.1 Vertical megamenus]
@@ -5931,7 +5932,7 @@ span.notify-right {
 }
 
 .border-b {
-    border: solid 1px #ccc;
+    border: solid 1px #fdfafa;
 }
 
 .tittle-b {
@@ -5939,10 +5940,10 @@ span.notify-right {
     font-size: 14px;
     text-align: center;
     padding: 10px;
-    background-color: #3b5998;
+    /*background-color: #3b5998;*/
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    color: white;
+    color: #3b5998;
     font-weight: bold;
 }
 .faticle{
@@ -5958,7 +5959,7 @@ span.notify-right {
 .home-article .post-desc {
     margin-bottom: 3px;
     padding: 3px 0 3px 16px;
-    border-bottom: solid 1px #ccc;
+    border-bottom: solid 1px #fdfafa;
     background: url(/assets/images/icon_title.png) no-repeat 5px center;
 }
 
