--- a/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -17,14 +17,14 @@
                                 for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
                                 {
                                     <li><span></span><a href="@Anpero.StringHelpper.GetParentCategoryLink(commonInfo.ProductCategoryList[i].Name,commonInfo.ProductCategoryList[i].Id)">@commonInfo.ProductCategoryList[i].Name</a></li>
-                                    if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
+                                    @*if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
                                     {
                                         for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
                                         {
                                             <li><span></span><a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].ChildCategory[j].Name,commonInfo.ProductCategoryList[i].ChildCategory[j].Id)">@commonInfo.ProductCategoryList[i].ChildCategory[j].Name</a></li>
                                         }
 
-                                    }
+                                    }*@
                                 }
                             }
 
