--- a/07_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -173,64 +173,67 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="box-additional">
-                            <div class="related-pro">
-                                <div class="slider-items-products">
-                                    <div class="new_title center">
-                                        <h2>Sản phẩm liên quan</h2>
-                                    </div>                                    
+                        <div class="row">
+                            <div class="box-additional">
+                                <div class="related-pro">
+                                    <div class="slider-items-products">
+                                        <div class="new_title center">
+                                            <h2>Sản phẩm liên quan</h2>
+                                        </div>
                                         @*<div class="products-grid col-md-12">*@
-                                    <div  id="related-slider"  class="product-flexslider hidden-buttons">
-                                        <div class="slider-items slider-width-col2 products-grid">
 
-                                            @if (ViewData["relateProduct"] != null)
+                                        <div id="related-slider" class="product-flexslider hidden-buttons">
+                                            <div class="slider-items slider-width-col2 products-grid">
+
+                                                @if (ViewData["relateProduct"] != null)
                                             {
                                                 AnperoFrontend.WebService.SearchResult relateProduct = (AnperoFrontend.WebService.SearchResult)ViewData["relateProduct"];
                                                 if (relateProduct.Item != null && relateProduct.Item.Length > 0)
                                                 {
                                                     foreach (var items in relateProduct.Item)
                                                     {
-                                                        <div class="item">
-                                                            <div class="item-inner">
-                                                                <div class="item-img">
-                                                                    <div class="item-img-info">
-                                                                        <a href="@Anpero.StringHelpper.GetProductLink(items.PrName,items.Id)" title="@items.PrName" class="product-image">
-                                                                            <img src="@items.Images" alt="@items.PrName">
-                                                                        </a>
-                                                                        <div class="new-label new-top-left">New</div>
-                                                                        <div class="item-box-hover">
-                                                                            <div class="box-inner">
-                                                                                <div class="product-detail-bnt">
-                                                                                    <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(items.PrName,items.Id)" title="@items.PrName">
-                                                                                        <span>Chi tiết</span>
-                                                                                    </a>
+                                                            <div class="item">
+                                                                <div class="item-inner">
+                                                                    <div class="item-img">
+                                                                        <div class="item-img-info">
+                                                                            <a href="@Anpero.StringHelpper.GetProductLink(items.PrName,items.Id)" title="@items.PrName" class="product-image">
+                                                                                <img src="@items.Images" alt="@items.PrName">
+                                                                            </a>
+                                                                            <div class="new-label new-top-left">New</div>
+                                                                            <div class="item-box-hover">
+                                                                                <div class="box-inner">
+                                                                                    <div class="product-detail-bnt">
+                                                                                        <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(items.PrName,items.Id)" title="@items.PrName">
+                                                                                            <span>Chi tiết</span>
+                                                                                        </a>
+                                                                                    </div>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
                                                                     </div>
+                                                                    <div class="item-info">
+                                                                        <div class="info-inner">
+                                                                            <div class="item-title">
+                                                                                <a href="@Anpero.StringHelpper.GetProductLink(items.PrName,items.Id)" title="@items.PrName">
+                                                                                    @items.PrName
+                                                                                </a>
+                                                                            </div>
+                                                                            @*<div class="item-content">
+                                                                <div class="item-price">
+                                                                    <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(items.Price) đ</span> </span> </div>
                                                                 </div>
-                                                                <div class="item-info">
-                                                                    <div class="info-inner">
-                                                                        <div class="item-title">
-                                                                            <a href="@Anpero.StringHelpper.GetProductLink(items.PrName,items.Id)" title="@items.PrName">
-                                                                                @items.PrName
-                                                                            </a>
+                                                                <div class="add_cart">
+                                                                    <button class="button btn-cart" type="button" onclick="Cart.addProduct(@items.Id,@items.Price,'@items.Images','@items.PrName');"><span>Mua ngay</span></button>
+                                                                </div>
+                                                            </div>*@
                                                                         </div>
-                                                                        @*<div class="item-content">
-                                                <div class="item-price">
-                                                    <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(items.Price) đ</span> </span> </div>
-                                                </div>
-                                                <div class="add_cart">
-                                                    <button class="button btn-cart" type="button" onclick="Cart.addProduct(@items.Id,@items.Price,'@items.Images','@items.PrName');"><span>Mua ngay</span></button>
-                                                </div>
-                                            </div>*@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                        </div>
                                                     }
                                                 }
                                             }
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
